# HNCDI-Explain-Fundamentals-of-QC

./: README.md  grover-tutorial-1-exercise.ipynb  grover-tutorial-2-exercise.ipynb  grover-tutorial-2-solution.ipynb  grover-tutorial-3-exercise.ipynb  grover-tutorial-3-solution.ipynb  grover-tutorial.ipynb  pyproject.toml  shor-tutorial-exercise.ipynb  shor-tutorial-solution.ipynb  shor-tutorial.ipynb
Presentation/: Beamer_UKRI_Hartree_Brand_2021_blue_title.nav  Beamer_UKRI_Hartree_Brand_2021_blue_title.out  Beamer_UKRI_Hartree_Brand_2021_blue_title.tex  Beamer_UKRI_Hartree_Brand_2021_blue_title.toc
grover-tutorial-exercises/: grover-tutorial-1-exercise.ipynb  grover-tutorial-1-solution.ipynb  grover-tutorial-2-exercise.ipynb  grover-tutorial-2-solution.ipynb  grover-tutorial-3-exercise.ipynb  grover-tutorial-3-solution.ipynb
other-formats/: shor-tutorial.html
shor-presentation/: Beamer_UKRI_Hartree_Brand_2021_blue_title.aux  Beamer_UKRI_Hartree_Brand_2021_blue_title.fdb_latexmk  Beamer_UKRI_Hartree_Brand_2021_blue_title.fls  Beamer_UKRI_Hartree_Brand_2021_white_on_blue_title.tex  runme.script
